// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions getUserOrders 1`] = `
Array [
  Object {
    "type": "userOrders",
    "value": Array [
      Object {
        "test": "test",
      },
    ],
  },
]
`;

exports[`actions getUserOrders 2`] = `
Array [
  Array [
    "0xAccount",
    -1357432110,
  ],
]
`;

exports[`actions getUserOrders dummy addr 1`] = `Array []`;

exports[`actions getUserOrders dummy addr 2`] = `Array []`;

exports[`actions orderBookSnapshotUpdate 1`] = `
Object {
  "type": "orderBookSnapshot",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions orderBookSubscriptionUpdate 1`] = `
Object {
  "type": "orderBookSubscription",
  "value": "pair",
}
`;

exports[`actions orderBookUpdate 1`] = `
Object {
  "type": "orderBookUpdate",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribeOrderBook 1`] = `
Array [
  Object {
    "type": "orderBookSubscription",
    "value": "",
  },
  Object {
    "type": "orderBookSubscription",
    "value": "pair",
  },
  Object {
    "type": "userOrders",
    "value": Array [
      Object {
        "test": "test",
      },
    ],
  },
]
`;

exports[`actions subscribeOrderBook 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`actions subscribeOrderBook 3`] = `
Array [
  Array [
    "0xAccount",
    -1357432110,
  ],
]
`;

exports[`actions userOrder 1`] = `
Object {
  "type": "userOrder",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions userOrderSubscriptionUpdate 1`] = `
Object {
  "type": "userOrderSubscription",
  "value": 123,
}
`;

exports[`actions userOrdersUpdate 1`] = `
Object {
  "type": "userOrders",
  "value": Array [
    Object {
      "test": "test",
    },
  ],
}
`;
